Refactor filtering logic to simplify operator handling and improve UI. Removed unused filter operators, updated filter input structure to use a single "includes" operator, and enhanced user feedback in the filters section. Adjusted styles for better layout and usability.

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <!-- Filters Section -->
       <section class="card">
         <h2>Filters</h2>
-        <p class="helper-text">Add filters to narrow down results. All filters use AND logic.</p>
+        <p class="helper-text">Add filters to narrow down results. All filters use AND logic with "includes" matching.</p>
         
         <div id="filtersContainer">
           <!-- Filter rows will be added here dynamically -->
