Update project configuration and enhance S3 integration. Added support for loading presets from S3, updated package dependencies, and improved environment variable management. Removed deprecated preset parsing logic and refined API responses for better data handling.

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Preset Analyzer</h1>
       <div class="status-bar">
-        <button id="refreshBtn" class="btn btn-secondary">🔄 Refresh Data</button>
+        <button id="refreshBtn" class="btn btn-secondary">🔄 Refresh from S3</button>
         <span id="statusText">Loading...</span>
       </div>
     </header>
@@ -41,7 +41,7 @@
           placeholder="e.g., fileName, conrolTitle, type, className, id, name"
           value="fileName, conrolTitle, type, className"
         >
-        <small>Common properties: <span id="commonProperties">loading...</span></small>
+        <small>Common properties: <span id="commonProperties">fileName, conrolTitle, type, className, id, name, src</span></small>
       </section>
 
       <!-- Actions -->
