--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Preset Analyzer</h1>
       <div class="status-bar">
-        <button id="refreshBtn" class="btn btn-secondary">🔄 Refresh from S3</button>
+        <button id="refreshBtn" class="btn btn-secondary">🔄 Sync from S3</button>
         <span id="statusText">Loading...</span>
       </div>
     </header>
